# smflex

./: .gitignore  CHANGELOG.md  COPYING  FlexLexer.h  Makefile  Makefile.in  README.md  ccl.c  ccl.h  check-line-directives.py  conf.in  config.mk.in  configure  configure.in  dfa.c  dfa.h  dist-build-test.sh  ecs.c  ecs.h  encode.sh  eval-skel-expr.c  eval-skel-expr.h  flex.html  flex.md  flex.orig.html  flex.skl  flexchar.h  flexdef.h  gen.c  gen.h  generated-header.skl  generated-header.skl.c  generated-scanner.skl  generated-scanner.skl.c  growstring.c  growstring.h  header.c  header.skl  header.skl.c  initscan.c  (+35 more)
historical/: c-cpp-unification.txt  header-file-copyright.txt  interactivity.txt  yy-state-buf-bug.txt
test/: .gitignore  Makefile  action-pct-brace.expect  action-pct-brace.lex  begin-special.lex  c-always-interactive.lex  c-batch.lex  c-int-always.expect  c-int-always.lex  c-int-batch-never.expect  c-int-batch-never.lex  c-int-batch.expect  c-int-batch.lex  c-int-default.expect  c-int-default.lex  c-int-interactive-set-int-0.expect  c-int-interactive-set-int-0.lex  c-int-interactive-set-int-isatty.expect  c-int-interactive-set-int-isatty.lex  c-int-interactive.expect  c-int-interactive.lex  c-int-never.expect  c-int-never.lex  c-int-set-int-0.expect  c-int-set-int-0.lex  c-int-set-int-1.expect  c-int-set-int-1.input  c-int-set-int-1.lex  c-int-set-int-isatty.expect  c-int-set-int-isatty.lex  c-int-set-int.expect  c-int-set-int.lex  c-int-set-isatty.expect  c-int-set-isatty.lex  c-interactive.lex  c-lexer1-no-lines.expect  c-lexer1.expect  c-lexer1.gp  c-lexer1.input  c-lexer1.lex  (+281 more)
test/include/: FlexLexer.h
