dnl# Process this file with autoconf to produce a configure script.
dnl#

dnl# Initialize autoconf and specify the name of a file in srcdir for
dnl# sanity checking.
dnl#
dnl# The autoconf manual explains that the use of a single argument with
dnl# AC_INIT is obsolete, but the recommended alternative requires
dnl# specifying a package version number, and I think it is inappropriate
dnl# for that information to appear here.  So I am choosing to retain the
dnl# "obsolete" usage.
dnl#
AC_INIT(initscan.c)

dnl# Set @YACC@ to "bison -y", typically.
AC_PROG_YACC

dnl# Set @CC@ to "gcc", usually.
AC_PROG_CC

dnl# Set @INSTALL@ to "/usr/bin/install -c", at least on cygwin.
AC_PROG_INSTALL

dnl# If $MAKE is set, propagate that via @SET_MAKE@.
AC_PROG_MAKE_SET

dnl# When config.status is invoked (which happens implicitly at the end
dnl# of 'configure'), create Makefile by substituting variables.
AC_OUTPUT(Makefile)
